--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
            терпеливым и добрым хозяином, строгим где нужно. 
            Не забывайте использовать поощрения и баловать своего 
            питомца вкусняшками за успешное выполнение задания</p>
+        <table>
+            <tr>
+                <td>Животное</td>
+                <td>Немецкая овчарка</td>
+            </tr>
+            <tr>
+                <td>Окрас</td>
+                <td>Восхитительный</td>
+            </tr>
+            <tr>
+                <td>Характер</td>
+                <td>Замечательный</td>
+            </tr>
+        </table>
     </body>
     <footer>contacts</footer>
     </html>
